# Agent-Tutor

./: .gitignore  README.md  pyproject.toml
configs/: agent.yaml  eval.yaml  main.yaml  models.yaml  processor.yaml  retrieval.yaml  slides2videos.yaml
src/tutor/: app.py  app_public.py  cli.py
src/tutor/client/: __init__.py  inference.py
src/tutor/commands/: app.py  chat.py  eval.py  eval_report.py  generate_qa.py  process.py  public.py  reclassify_context.py  serve.py
src/tutor/core/: chat.py  conversation_eval.py  eval_backends.py  eval_report.py  evaluation.py  process.py  public_auth.py  qa_generation.py  reclassify_context.py  streaming.py  student_conversation_store.py
src/tutor/modules/agent/: agent.py  agent_tracing.py  answer_agent.py  pedagogic_agent.py  pedagogy.py  summarizer.py  tutor_orchestrator.py
src/tutor/modules/models/: base.py  gemini.py  groq.py  openai_model.py  qwen.py  utils.py
src/tutor/modules/processor/: processor.py
src/tutor/modules/retrieval/: RAG.py  embeder.py  retriever.py
src/tutor/server/: __init__.py  app.py  inference.py  schemas.py
src/tutor/ui/: common.py
src/tutor/utils/: config.py  file_handler.py  misc.py  paths.py
tests/: test_answer_anchor.py  test_public_auth.py  test_student_conversation_store.py
