[project]
name = "agent-tutor"
version = "0.1.0"
dependencies = []
requires-python = ">=3.10"

[project.scripts]
tutor = "tutor.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv.extra-build-dependencies]
flash-attn = ["setuptools>=80.9.0", "torch>=2.6,<2.7"]
