[project]
name = "agent-tutor"
version = "0.1.0"
dependencies = [
    "argcomplete>=3.6.3",
    "docling>=2.74.0",
    "dotenv>=0.9.9",
    "google-genai>=1.64.0",
    "groq>=1.0.0",
    "numpy>=2.2.6",
    "peft>=0.18.1",
    "pillow>=12.1.1",
    "pyyaml>=6.0.3",
    "qwen-vl-utils>=0.0.14",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=4.40.0,<5.0.0",
]
requires-python = ">=3.10"

[project.scripts]
tutor = "tutor.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv.extra-build-dependencies]
flash-attn = ["setuptools>=80.9.0", "torch>=2.6,<2.7"]
