[project]
name = "agent-tutor"
version = "0.1.0"
dependencies = [
    "argcomplete>=3.6.3",
    "docling>=2.74.0",
    "dotenv>=0.9.9",
    "faster-whisper>=1.2.1",
    "fitz>=0.0.1.dev2",
    "fastapi>=0.115.0",
    "frontend>=0.0.3",
    "google-genai>=1.64.0",
    "groq>=1.0.0",
    "httpx>=0.28.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-classic>=1.0.3",
    "llama-index>=0.14.20",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pdf2image>=1.17.0",
    "peft>=0.18.1",
    "pillow>=12.1.1",
    "pyyaml>=6.0.3",
    "qwen-vl-utils>=0.0.14",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.45.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=4.40.0,<5.0.0",
    "uvicorn[standard]>=0.32.0",
    "vllm>=0.19.1",
    "openai>=2.31.0",
    "requests>=2.32.5",
]
requires-python = ">=3.10"

[project.scripts]
tutor = "tutor.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv.extra-build-dependencies]
flash-attn = ["setuptools>=80.9.0", "torch>=2.6,<2.7"]
